# llm-inference

./: .gitignore  .impeccable.md  LICENSE  README.md  __init__.py  cli.py  cost.py  dashboard.html  latency.py  live.py  pyproject.toml  report.py  requirements.txt  resources.py  throughput.py
serve/: __init__.py  cli.py  detect.py  install.py  log.py  model.py  server.py  state.py
