[project]
name = "infer-metrics"
version = "1.0.0"
description = "Mesure les métriques d'inférence LLM (TTFT, TPOT, débit, coût, VRAM) sur API OpenAI-compat. Inclut infer-serve pour héberger un GGUF via llama.cpp."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Yoannoza" }]
keywords = ["llm", "inference", "benchmark", "ttft", "tpot", "llama.cpp", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "huggingface_hub>=0.24",
]

[project.urls]
Homepage = "https://github.com/Yoannoza/llm-inference"
Issues = "https://github.com/Yoannoza/llm-inference/issues"

[project.scripts]
infer-metrics = "cli:main"
infer-serve = "serve.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["serve"]
include = ["cli.py", "cost.py", "latency.py", "throughput.py", "resources.py", "report.py", "__init__.py"]
